[gd_scene load_steps=2 format=3 uid="uid://b8735bn5u2ixx"]

[ext_resource type="Script" path="res://ui/ui.gd" id="1_rgjyd"]

[node name="UI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_rgjyd")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="Control"]
layout_mode = 1
offset_right = 116.0
offset_bottom = 50.0

[node name="LevelLabel" type="Label" parent="Control/GridContainer"]
layout_mode = 2
text = "Level: level"

[node name="LinesLabel" type="Label" parent="Control/GridContainer"]
layout_mode = 2
text = "Lines Left: Max"

[node name="Button" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_right = 61.0
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "Restart Level"

[node name="TimerStart" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[connection signal="pressed" from="Control/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="TimerStart" to="." method="_on_timer_start_timeout"]
